<resources>
    <string name="app_name">hotel</string>

    <string name="hotel">悦目酒店</string>
    <string name="welcome">尊敬的贵宾，欢迎入住镇江明都大饭店!</string>

    <string name="choice_mode">选择模板</string>
    <string-array name="mode_list">
        <item>模板1</item>
        <item>模板2</item>
    </string-array>

    <string name="live_tv">电视</string>
    <string name="hd">高清</string>
    <string name="shopping">购物</string>
    <string name="app">应用</string>
    <string name="setting">设置</string>
    <string name="custom">自定义</string>
    <string name="not_install_app">未安装该应用</string>
    <string name="enter_app">进入</string>

    <string name="day">日</string>
    <string name="month">月</string>

    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
    <string name="sunday">周日</string>

    <string name="am">上午</string>
    <string name="pm">下午</string>

</resources>
